[gd_scene load_steps=3 format=3 uid="uid://15ka5fhajqd0"]

[ext_resource type="Script" path="res://scripts/ui/lobby.gd" id="1_1renc"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_55sjd"]
blend_mode = 1
light_mode = 1

[node name="Lobby" type="Node2D"]
script = ExtResource("1_1renc")

[node name="LobbyMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ReadyAndStart" type="Button" parent="LobbyMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 954.0
offset_top = 544.0
offset_right = 1106.0
offset_bottom = 590.0
grow_horizontal = 2
grow_vertical = 0
text = "Start
"

[node name="PanelContainer" type="PanelContainer" parent="LobbyMenu"]
layout_mode = 1
offset_right = 1004.0
offset_bottom = 362.0

[node name="PlayerContainer" type="ScrollContainer" parent="LobbyMenu/PanelContainer"]
material = SubResource("CanvasItemMaterial_55sjd")
layout_mode = 2

[node name="Players" type="VBoxContainer" parent="LobbyMenu/PanelContainer/PlayerContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer2" type="PanelContainer" parent="LobbyMenu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 382.0
offset_right = 542.0
offset_bottom = 608.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyMenu/PanelContainer2"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="LobbyMenu/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Messages" type="ScrollContainer" parent="LobbyMenu/PanelContainer2/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="LobbyMenu/PanelContainer2/VBoxContainer/PanelContainer/Messages"]
layout_mode = 2
text = "Tyler: Hello"

[node name="HBoxContainer" type="HBoxContainer" parent="LobbyMenu/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="TextEdit" type="TextEdit" parent="LobbyMenu/PanelContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="LobbyMenu/PanelContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Send"

[connection signal="pressed" from="LobbyMenu/ReadyAndStart" to="." method="_on_ready_and_start_pressed"]
